@@ -1,13 +1,0 @@
-#!python3 fakereqman.py
-#:valid:ERROR THIS --b
-# -*- coding: utf-8 -*-
-#--------------------------------------------------------------
-# ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
-#    (works in vs code, press F5)
-#--------------------------------------------------------------
-
-- context:
-    - GET: http://localhost:11111/get_json
-
-- context:
-    - GET: http://localhost:11111/get_json
