@@ -1,16 +1,0 @@
-#!python3 fakereqman.py
-#:valid:ERROR THIS 
-
-# -*- coding: utf-8 -*-
-#--------------------------------------------------------------
-# ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
-#    (works in vs code, press F5)
-#--------------------------------------------------------------
-- conf:
-    v200: 201
-- conf:
-    v200: 200
-- GET: http://localhost:11111/get_txt
-  tests:
-    - status: <<v200>>
-
