@@ -1,7 +1,7 @@
-#!python3 fakereqman.py 
+#!python3 fakereqman.py
 #:valid:1 THIS --b --o:AEFF_solo_default.html
 #:valid:1,1,1 THIS -yolo --b --o:AEFF_solo_yolo.html
-#:valid:1:1,1,1 THIS +yolo --b  
+#:valid:1:1,1,1 THIS +yolo --b
 #:valid:ERROR THIS +yolo --s               # can't save RMR when DUAL MODE!
 
 ## -*- coding: utf-8 -*-
@@ -10,7 +10,13 @@
 #    (works in vs code, press F5)
 #--------------------------------------------------------------
 
-- conf:
+- TEST:
+  - GET: /get_txt
+    tests:
+      - status: 200
+
+- call: TEST
+  params:
     root: http://localhost:11111
 
     switches:
@@ -23,8 +29,3 @@
           GET: http://localhost:11111/get_txt
           tests:
             status: 200
-
-- GET: /get_txt
-  tests:
-    - status: 200
-
