@@ -1,4 +1,5 @@
 Working on 3.0.0 (new core)
+- remove SELFCONF (too overbloated and not useful)
 - use HTTPX again and forever ;-) (bye aiohttp)
 - "proxy" support too (can be really configurable, see proxies/httpx)
 - FIX: dual html -> dual status_code ;-) (not just the first)
